metadata-classic/objects/HCConfigChannel__c.object
<CustomObject>
    <fields>
        <fullName>AssociatedForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the form (e.g., pre-chat form, email form) used when the contact channel is selected.</description>
        <label>Associated Form</label>
        <referenceTo>HCConfigForm__c</referenceTo>
        <relationshipName>ContactChannels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvailableOnDesktop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the contact channel is visible on desktop-like devices.</description>
        <label>Available on Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableOnMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the contact channel is visible on mobile-like devices.</description>
        <label>Available on Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <description>Text area to store the text used for a clarifier message in the upper right hand corner of the channel card.</description>
        <inlineHelpText>Text area to store the text used for a clarifier message in the upper right hand corner of the channel card.</inlineHelpText>
        <label>Badge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChannelUnavailableEndTime__c</fullName>
        <description>The end date/time that the channel unavailable message should be removed.</description>
        <inlineHelpText>Set time to 1 hour after you want the channel to be turned back on.  A time-based workflow will turn the channel on 1 hour before the time set here.  For example, if the phones should be turned back on at 2:00 PM then set the start time to be 3:00 PM.</inlineHelpText>
        <label>Channel Unavailable End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChannelUnavailableStartTime__c</fullName>
        <description>The start date/time that the channel unavailable message should be displayed.</description>
        <inlineHelpText>Set time to 1 hour after you want the channel to be turned off.  A time-based workflow will turn the channel off 1 hour before the time set here.  For example, if the phones should be turned off at 11:00 AM then set the start time to be 12:00 PM.</inlineHelpText>
        <label>Channel Unavailable Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <description>Text field to store the display disclaimer text of the help center contact channel card (i.e., legal text disclaimer message).</description>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Text field to store the code of the icon used on the help center contact channel card.</description>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkURL__c</fullName>
        <description>The URL link of the channel.</description>
        <label>LinkURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <description>Phone field to indicate the number displayed when visitor selects the phone or text channel offering.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ResponseTime__c</fullName>
        <description>Text field to store the display estimated response time text of the help center contact channel card.</description>
        <label>Response Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SocialMediaURL__c</fullName>
        <description>URL field to store the link to the social media channel contact option</description>
        <label>Social Media URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The publication status of the channel offering for the help center.</description>
        <inlineHelpText>Draft: channel is being built out 
Needs approval: channel needs final approval before making it visible to site visitors 
Publish: channel is made available for use on the public help center 
Archive: channel is archived and no longer visible</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the channel offering card.</description>
        <inlineHelpText>The title of the channel offering card as displayed on the help center.</inlineHelpText>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Picklist whose values indicate the type of contact channel available on the help center.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Messenger</fullName>
                </value>
                <value>
                    <fullName>ExpertPro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnavailableMessage__c</fullName>
        <description>Text area to enter an informational message that will display on the channel card when / if the channel is unavailable.</description>
        <inlineHelpText>Text area to enter an informational message that will display on the channel card when / if the channel is unavailable.</inlineHelpText>
        <label>Channel Unavailable Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unavailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the channel is currently unavailable.  Used for emergency purposes, town halls, etc.</description>
        <inlineHelpText>Checkbox to indicate if the channel is currently unavailable.  Used for emergency purposes, town halls, etc.</inlineHelpText>
        <label>Channel Unavailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Open text field to store the version number of the contact channel.</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HC Config: Channel</label>
    <listViews>
        <fullName>AllChannels</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Icon__c</columns>
        <columns>PhoneNumber__c</columns>
        <columns>AvailableOnDesktop__c</columns>
        <columns>AvailableOnMobile__c</columns>
        <columns>ResponseTime__c</columns>
        <columns>Unavailable__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigChannel__c.ContactChannel</value>
        </filters>
        <label>01: All Channels</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Archived</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Icon__c</columns>
        <columns>PhoneNumber__c</columns>
        <columns>AvailableOnDesktop__c</columns>
        <columns>AvailableOnMobile__c</columns>
        <columns>ResponseTime__c</columns>
        <columns>Unavailable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigChannel__c.ContactChannel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>04: Archived</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Drafts</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Icon__c</columns>
        <columns>PhoneNumber__c</columns>
        <columns>AvailableOnDesktop__c</columns>
        <columns>AvailableOnMobile__c</columns>
        <columns>ResponseTime__c</columns>
        <columns>Unavailable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigChannel__c.ContactChannel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Needs approval</value>
        </filters>
        <label>02: Drafts</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hidden</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Icon__c</columns>
        <columns>PhoneNumber__c</columns>
        <columns>AvailableOnDesktop__c</columns>
        <columns>AvailableOnMobile__c</columns>
        <columns>ResponseTime__c</columns>
        <columns>Unavailable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigChannel__c.ContactChannel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Hidden</value>
        </filters>
        <label>05: Hidden</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Icon__c</columns>
        <columns>PhoneNumber__c</columns>
        <columns>AvailableOnDesktop__c</columns>
        <columns>AvailableOnMobile__c</columns>
        <columns>ResponseTime__c</columns>
        <columns>Unavailable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigChannel__c.ContactChannel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>03: Published</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <recordTypes>
        <fullName>ContactChannel</fullName>
        <active>true</active>
        <description>Record type used to manage the help center contact channels.</description>
        <label>Contact Channel</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>RequiredMessageForChannelUnavailable</fullName>
        <active>true</active>
        <description>Validation rule to require a channel unavailable message if the channel is marked as unavailable.</description>
        <errorConditionFormula>RecordType.Name = &apos;Contact Channel&apos; &amp;&amp;
Unavailable__c  &amp;&amp;
ISBLANK(UnavailableMessage__c)</errorConditionFormula>
        <errorDisplayField>UnavailableMessage__c</errorDisplayField>
        <errorMessage>A message is required when marking a channel unavailable.</errorMessage>
    </validationRules>
</CustomObject>